Idiomas segunda página

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel = "stylesheet" href = "style.css">
     <script src ="index.js" defer></script>
 </head>
-<body>
+<body class="fondo-principal">
     <header>
         <a href="index.html" ><img src="Imágenes/SwiftGrammar.png" alt="Logo SwiftGrammar" id="logo"></a>
         <div>
             <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-es.svg" alt="Logo Español">
             <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-en.svg" alt="Logo Inglés">
             <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-it.svg" alt="Logo Italiano">
-            <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-fr.svg" alt="Logo Francés">     
+            <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-fr.svg" alt="Logo Francés">
+            <img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-de.svg" alt="Logo Alemán">
+            <img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-pt.svg" alt="Logo Portugés">                   
         </div>
         <nav>
-            <label for="idioma">Idioma</label>
+            <label for="" id="idioma">Idioma</label>
             <select name="" id="idioma" onchange="seleccionarIdioma()">
                 <option value="es">Español</option>
                 <option value ="en">English</option>
