Agregado de más idiomas

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
             <img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-pt.svg" alt="Logo Portugés">                   
         </div>
         <nav>
-            <label for="" id="idioma">Idioma</label>
+            <label for="idioma">Idioma</label>
             <select name="" id="idioma" onchange="seleccionarIdioma()">
                 <option value="es">Español</option>
                 <option value ="en">English</option>
                 <option value ="ita">Italiano</option>
-                <option value="fr">Francés</option>
+                <option value="fr" >Français</option>
+                <option value="al">Deutsch</option>
+                <option value="port">Português</option>
             </select>
         </nav> 
 
