--- a/veridiomas.html
+++ b/veridiomas.html
@@ -21,10 +21,12 @@
             <nav>
                 <label for="idioma">Idioma</label>
                 <select name="" id="idioma" onchange="seleccionarIdioma()">
-                    <option value ="es">Español</option>
+                    <option value="es">Español</option>
                     <option value ="en">English</option>
                     <option value ="ita">Italiano</option>
-                    <option value ="fr">Francés</option>
+                    <option value="fr" >Français</option>
+                    <option value="al">Deutsch</option>
+                    <option value="port">Português</option>
                 </select>
             </nav>
     </header>
@@ -62,7 +64,7 @@
     </main>
     <footer>
         <div id="contactos">
-            <p>Contactanos</p>
+            <p id="contacto">Contactanos</p>
             <p>swiftgrammar@gmail.com</p>
             <p>+54 9 341 43-5678</p>
         </div>
