Texto escondido en pag. idiomas

--- a/veridiomas.html
+++ b/veridiomas.html
@@ -19,7 +19,6 @@
                 <img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-pt.svg" alt="Logo Portugés">     
             </div>
             <nav>
-                <label for="idioma">Idioma</label>
                 <select name="" id="idioma" onchange="seleccionarIdioma()">
                     <option value="es">Español</option>
                     <option value ="en">English</option>
@@ -31,34 +30,65 @@
             </nav>
     </header>
     <main id="contenido">
-        <h2 id="aprende" >Aprendé idiomas en su solo click</h2>
+        <h2 id="aprende" >Aprendé idiomas en un solo click</h2>
         <div class="partes">
-            <article class="idiomas">
-                <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-es.svg" alt="Bandera España">
-                <p id="español">Clases de español</p>
-                </article>
-            <article class="idiomas">
-                <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-en.svg" alt="Bandera Reino Unido">
+            <article class="tarjeta">
+                <div class="idiomas">
+                    <figure><img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-es.svg" alt="Bandera España"></figure>
+                    <p id="español">Clases de español</p>
+                    </div>
+                <div class="hidden">
+                    <p id="elige-es">Elige entre más de 7.991 profesores nativos</p>
+                </div>
+            </article>
+            <article class="tarjeta">
+                <div class="idiomas">
+                <figure><img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-en.svg" alt="Bandera Reino Unido"></figure>
                 <p id="ingles">Clases de inglés </p>
+                </div>
+                <div class="hidden">
+                    <p id="elige-en">Elige entre más de 18.564 profesores nativos</p>
+                </div>
                 </article>
-            <article class="idiomas">
-                <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-it.svg" alt="Bandera Italia">
+            <article class="tarjeta">
+                <div class="idiomas">
+                <figure><img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-it.svg" alt="Bandera Italia"></figure>
                 <p id="italiano">Clases de italiano </p>
+                </div>
+                <div class="hidden">
+                    <p id="elige-ita">Elige entre más de 1.727 profesores nativos</p>
+                </div>
                 </article>
         </div>
         
         <div class="partes">
-            <article class="idiomas">
-                <img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-fr.svg" alt="Bandera Francia">
+            <article class="tarjeta">
+                <div class="idiomas">
+                <figure><img src="https://cdn.busuu.com/homepage/34.11.2/img/icons/flags/icon_flag-fr.svg" alt="Bandera Francia"></figure> 
                 <p id="frances">Clases de francés </p>
+                </div>
+                <div class="hidden">
+                    <p id="elige-fr">Elige entre más de 2.496 profesores nativos</p>
+                </div>
                 </article>
-            <article class="idiomas">
-                <img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-de.svg" alt="Bandera Alemania">
+                
+            <article class="tarjeta">
+                <div class="idiomas">
+                <figure><img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-de.svg" alt="Bandera Alemania"></figure>
                 <p id="aleman">Clases de alemán </p>
+                </div>
+                <div class="hidden">
+                    <p id="elige-al">Elige entre más de 957 profesores nativos</p>
+                </div>
                 </article>
-            <article class="idiomas">
-                <img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-pt.svg" alt="Bandera Brasil">
+            <article class="tarjeta">
+                <div class="idiomas">
+                <figure><img src="https://cdn.busuu.com/homepage/34.12.0/img/icons/flags/icon_flag-pt.svg" alt="Bandera Brasil"></figure>
                 <p id="portugues">Clases de portugués </p>
+                </div>
+                <div class="hidden">
+                    <p id="elige-port">Elige entre más de 1.153 profesores nativos</p>
+                </div>
                 </article>
         </div>
     </main>
