Entrega TP Vainilla

--- a/veridiomas.html
+++ b/veridiomas.html
@@ -94,15 +94,18 @@
     </main>
     <footer>
         <div id="contactos">
-            <p id="contacto">Contactanos</p>
-            <p>swiftgrammar@gmail.com</p>
-            <p>+54 9 341 43-5678</p>
+            <div>
+                <p id="contacto">Contactanos</p>
+                <p>swiftgrammar@gmail.com</p>
+                <p>+54 9 341 43-5678</p>
+            </div>
+            <div id="redes-sociales">
+                <a href ="https://es-la.facebook.com/"><img src="https://1.bp.blogspot.com/-wahf8oCRWDc/X8uecfWoDfI/AAAAAAAAMtE/fzr2CcieYi0oO53K0m9bkHCD8y-e6wPCACLcBGAsYHQ/s456/facebook%2Blogo%2Bpng%2Bsin%2Bfondo%2B%25281%2529.png" alt="Logo Facebook" class="red"></a>
+                <a href = "https://x.com/X"><img src="https://seeklogo.com/images/T/twitter-x-logo-0339F999CF-seeklogo.com.png" alt="Logo X" class="red"></a>
+                <a href="https://ar.linkedin.com/"><img src="https://cdn-icons-png.flaticon.com/512/4401/4401412.png" alt="Logo Linkedin" class="red"></a>
+            </div>
         </div>
-        <div id="redes-sociales">
-            <img src="https://1.bp.blogspot.com/-wahf8oCRWDc/X8uecfWoDfI/AAAAAAAAMtE/fzr2CcieYi0oO53K0m9bkHCD8y-e6wPCACLcBGAsYHQ/s456/facebook%2Blogo%2Bpng%2Bsin%2Bfondo%2B%25281%2529.png" alt="Logo Facebook" class="red">
-            <img src="https://seeklogo.com/images/T/twitter-x-logo-0339F999CF-seeklogo.com.png" alt="Logo X" class="red">
-            <img src="https://cdn-icons-png.flaticon.com/512/4401/4401412.png" alt="Logo Linkedin" class="red">
-        </div>
+        <img src="https://cdn-icons-png.flaticon.com/512/5495/5495486.png" alt="logo" id="logo-footer">
 
     </footer>
 </body>
